# GoogleMeetBot

./: LICENSE  Makefile  Readme.md  pyproject.toml
meetbot/: __init__.py  browser.py  chat.py  chat_observer.js  chat_sender.js  exception.py  get_people.js  interact.py  main.py  type_hints.py  utils.py
meetbot/js/: chat_observer.js  chat_sender.js  get_people.js
